changed it to run on java 8 instead of 14